--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
      "dotenv": "^16.0.0"
   }
 }
